syntax = "proto3";

//***********************好友邀请、群邀请***********************//

// 邀请
message InvitationProto{
  string id = 1;
  uint64 requesterId = 2 [jstype = JS_STRING];
  string requesterAlias = 3;
  string requesterNickname = 4;
  string requesterProfile = 5;
  uint64 addresseeId = 6 [jstype = JS_STRING];
  string addresseeAlias = 7;
  string addresseeNickname = 8;
  string addresseeProfile = 9;
  string content = 10;
  string inviteStatus = 11;
  string inviteType = 12;
  uint64 createdAt = 13;
  uint64 updatedAt = 14;
}

// 好友
message FriendProto{
  string id = 1;
  uint64 userId = 2;
  uint64 friendId = 3;
  string friendName = 4;
  string alias = 5;
  uint32 isBlocked = 6;
  uint32 isMute = 7;
  uint32 isStickOnTop = 8;
  uint32 createdAt = 9;
  uint32 updatedAt = 10;
}

//-------------------------------------------------发送好友邀请-[发送方]----------------------------------------

// 发送好友邀请
message FriendInvitationRequestRequest{
  uint64 addresseeId = 1 [jstype = JS_STRING];
  string addresseeAlias = 2;
  string content = 3;
}

//---------------------------------------------发送好友邀请ack-[发送方]-and-[接收方]--------------------------------

// 发送好友邀请 ack
message FriendInvitationRequestAck{
  InvitationProto invitationProto = 1;

  uint32 res = 2; //0-失败，1-成功
}

//-------------------------------------------------同意好友邀请-[发送方]----------------------------------------

// 同意好友邀请
message FriendInvitationAcceptRequest{
  string id = 1;
}

//---------------------------------------------同意好友邀请ack-[发送方]-and-[接收方]--------------------------------

// 同意好友邀请 ack
message FriendInvitationAcceptAck{
  string id = 1;

  FriendProto friendProto = 2;

  uint32 res = 3; //0-失败，1-成功
}

//-------------------------------------------------拒绝好友邀请-[发送方]----------------------------------------

// 拒绝好友邀请
message FriendInvitationDeclinedRequest{
  string id = 1;
}

//---------------------------------------------拒绝好友邀请ack-[发送方]-and-[接收方]--------------------------------

// 拒绝好友邀请 ack
message FriendInvitationDeclinedAck{
  string id = 1;

  uint32 res = 2; //0-失败，1-成功
}

//---------------------------------------------推送最新好友邀请信息----------------------------------------------

//获取最新好友邀请信息
message FriendInvitationRequest{
  uint32 updatedAt = 1;
}

//获取最新好友邀请信息ack
message FriendInvitationAck{
  repeated InvitationProto invitationProto = 1;

  uint32 res = 2; //0-失败，1-成功
}

//---------------------------------------------推送最新好友信息----------------------------------------------

//获取最新好友信息
message FriendRequest{
  uint32 updatedAt = 1;
}

//获取最新好友信息ack
message FriendAck{
  repeated FriendProto friendProto = 1;

  uint32 res = 2; //0-失败，1-成功
}
